--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-TRAINNAME="train"
-RESNAME="predict"
+P1="describe"
+P2="histogram"
+P3="scatter_plot"
+P4="pair_plot"
 
 # Makefile
 MAKEFLAGS += --silent
